coloquei um button de mudar o tema

--- a/arquivos/style.css
+++ b/arquivos/style.css
@@ -51,6 +51,7 @@ header {
     justify-content: space-between;
     align-items: center;
     height: 56px;
+    padding: 0px 8px;
 }
 
 header img {
@@ -80,10 +81,10 @@ header a {
 
 #mudar-tema {
     background-image: linear-gradient(to right, white 0%, white 50%, black 50%, black 100%);
-    width: 20px;
-    height: 20px;
+    width: 16px;
+    height: 16px;
     border-radius: 50%;
-    border: 3px solid black;
+    border: 2px solid black;
 }
 
 .topicsHeader {
@@ -286,7 +287,7 @@ header a {
 }
 
 .divLing {
-    padding: 50px 20px;
+    padding: 30px 20px;
 }
 
 #secLing .divLingPrinc {
@@ -294,11 +295,6 @@ header a {
     flex-flow: wrap column;
     align-items: center;
     padding: 80px 0px;
-}
-
-.divLingPrinc h1 {
-    font-size: 3.5em;
-    margin-bottom: 40px;
 }
 
 #divHtml {
@@ -320,12 +316,7 @@ header a {
 #divJs .buttonReferen:hover {
     background-color: var(--brancoHover);
 }
-
-#divJs .buttonObter {
-    color: black;
-}
-
-#divJs .divLingCode {
+#divJs .buttonObter, #divJs .divLingCode {
     color: black;
 }
 
@@ -963,7 +954,7 @@ header a {
 #hasteMonitor {
     margin: auto;
     background-color: var(--AzulFundo);
-    height: 60px;
+    height: 80px;
     width: 50px;
 }
 
@@ -977,10 +968,11 @@ header a {
 /* slide */
 #img-content {
     display: flex;
+    justify-content: space-between;
     overflow: hidden;
 }
 
-#BordaMonitor img {
+#img-content img {
     width: 100%;
 }
 
