--- a/arquivos/mediaqueryLing.css
+++ b/arquivos/mediaqueryLing.css
@@ -134,7 +134,7 @@
         margin: 90px 0px 80px 0px;
     }
 
-    #secComoFazer {
+    #comoFazerDiv {
         max-width: 994px;
         margin: auto;
     }
