--- a/p/arquivos/login.css
+++ b/p/arquivos/login.css
@@ -4,6 +4,7 @@
     margin: 0%;
     padding: 0%;
     box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 :root {
@@ -18,10 +19,142 @@
     --var: ;
     --var: ;
     --var: ;
+}
 
-    /**/
-    --var: ;
-    --var: ;
-    --var: ;
-    --var: ;
+body {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+}
+
+header {
+    height: 65px;
+    padding: 0px 10px;
+    margin-top: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: gray;
+}
+
+main {
+    height: 100%;
+}
+
+main > div {
+    padding: 20px;
+    width: 100%;
+    display: flex;
+    flex-flow: column nowrap;
+}
+
+#msg-content {
+    background-color: #282A35;
+    color: white;
+}
+
+#aviso-signin {
+    text-align: right;
+    font-size: 0.9em;
+    font-weight: bold;
+    margin-bottom: 40px;
+}
+#aviso-signin a {
+    color: #04AA6D;
+    text-decoration: none;
+}
+
+#box-icons {
+    display: flex;
+    flex-flow: column nowrap;
+    gap: 5px;
+}
+
+#or {
+    text-align: center;
+    margin: 20px auto;
+    color: rgb(155, 154, 154);
+}
+
+#box-icons > div {
+    display: flex;
+    flex-flow: row nowrap;
+    gap: 5px;
+    
+}
+
+#box-icons > div > a {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 5px 17px;
+    text-decoration: none;
+    color: black;
+    font-size: 0.9em;
+    font-weight: bold;
+    width: 50%;
+    border: 1px solid lightgray;
+    border-radius: 6px;
+}
+
+form {
+    max-width: 600px;
+}
+
+form h1 {
+    font-size: 1.5em;
+}
+
+#log {
+    display: flex;
+    gap: 8px;
+}
+
+#log > a {
+    width: 100%;
+    text-align: center;
+    font-size: 0.9em;
+    padding: 12px;
+    border-radius: 5px;
+
+}
+
+#login {
+    background-color: #04AA6D;
+    color: white;
+    font-weight: bold;
+}
+#forgot {
+    background-color: white;
+    border: 1px solid #afafaf;
+
+}
+
+h1 {
+    margin-bottom: 30px;
+}
+
+#aviso_desenv {
+    color: rgb(255, 0, 0);
+    font-size: 1.3em;
+    text-align: center;
+    margin: 10px auto;
+    border: 2px dashed red;
+    width: 90%;
+    max-width: 600px;
+}
+
+input {
+    height: 40px;
+    width: 100%;
+    border-radius: 5px;
+    border: 1px solid #afafaf;
+    padding: 0px 10px;
+}
+
+#input input:not(:last-child) {
+    margin-bottom: 4px;
+}
+#input:not(:last-child) {
+    margin-bottom: 20px;
 }
