--- a/arquivos/style.css
+++ b/arquivos/style.css
@@ -174,15 +174,18 @@ header a {
 
 /* MENU */
 
-#SectionMenuItens {
+#MenuItens {
     display: none;
-    height: 100vh;
+    position: fixed;
+    width: 100%;
+    height: 100%;
     background-color: var(--AzulFundo);
     color: white;
     padding: 10px 0px 90px 0px;
+    overflow-y: scroll;
 }
 
-#SectionMenuItens i {
+#MenuItens i {
     font-size: 2em;
 }
 
